[gd_scene load_steps=6 format=3 uid="uid://cuu4hutlbedn8"]

[ext_resource type="Script" uid="uid://cvg6xg7ijocbi" path="res://Entities/Player/player.gd" id="1_lu8i8"]
[ext_resource type="Script" uid="uid://qn8jmjn8my8v" path="res://Entities/health_component.gd" id="1_mv1ah"]
[ext_resource type="Script" uid="uid://vrxl6yrifvq3" path="res://Entities/hitbox_component.gd" id="2_3uyv8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3uyv8"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lu8i8"]
radius = 0.65
height = 1.9

[node name="Player" type="CharacterBody3D" groups=["velocity_trackable"]]
script = ExtResource("1_lu8i8")
max_speed = 8.0
accel = 10.0

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
fov = 90.0

[node name="MovementHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_3uyv8")

[node name="HealthComponent" type="Node3D" parent="."]
script = ExtResource("1_mv1ah")
health = 50.0
metadata/_custom_type_script = "uid://qn8jmjn8my8v"

[node name="HitboxComponent" type="Area3D" parent="."]
script = ExtResource("2_3uyv8")
id = "Player"
metadata/_custom_type_script = "uid://vrxl6yrifvq3"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_lu8i8")

[connection signal="health_reached_zero" from="HealthComponent" to="." method="_on_health_component_health_reached_zero"]
[connection signal="attacked" from="HitboxComponent" to="." method="_on_hitbox_component_attacked"]
